[gd_scene load_steps=5 format=3 uid="uid://7fowrpka5u01"]

[ext_resource type="Script" path="res://AnimatedList/AnimatedItem/AnimatedItem.gd" id="2_2wcj4"]
[ext_resource type="Texture2D" uid="uid://5d3rxudx6s3q" path="res://Assets/Buttons/close.png" id="3_hnjhj"]
[ext_resource type="Texture2D" uid="uid://g7ubw4n8yn7y" path="res://Assets/Buttons/duplicate.png" id="4_tvpw8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6q5g"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.454902, 0.454902, 0.454902, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="JuicyItem" type="Sprite2D"]
script = ExtResource("2_2wcj4")
selected_border_width = Vector2(1, 1)
grab_scale_factor = 1.05

[node name="MouseDetection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Preview" type="Sprite2D" parent="."]

[node name="selected" type="Panel" parent="."]
visible = false
show_behind_parent = true
scale = Vector2(1.05, 1.05)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6q5g")

[node name="ButtonsOverlay" type="Node2D" parent="."]
modulate = Color(0, 0, 0, 0)

[node name="Delete" type="TextureButton" parent="ButtonsOverlay"]
offset_right = 20.0
offset_bottom = 20.0
texture_normal = ExtResource("3_hnjhj")

[node name="Duplicate" type="TextureButton" parent="ButtonsOverlay"]
offset_left = 24.0
offset_right = 44.0
offset_bottom = 20.0
texture_normal = ExtResource("4_tvpw8")

[node name="Debug" type="Label" parent="."]
offset_left = -6.0
offset_top = 14.0
offset_right = 88.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 0.156863)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2

[connection signal="gui_input" from="MouseDetection" to="." method="_on_mouse_detection_gui_input"]
[connection signal="mouse_entered" from="MouseDetection" to="." method="_on_mouse_detection_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetection" to="." method="_on_mouse_detection_mouse_exited"]
[connection signal="mouse_entered" from="ButtonsOverlay/Delete" to="." method="_on_buttons_mouse_over" binds= [true]]
[connection signal="mouse_exited" from="ButtonsOverlay/Delete" to="." method="_on_buttons_mouse_over" binds= [false]]
[connection signal="pressed" from="ButtonsOverlay/Delete" to="." method="_on_delete_pressed"]
[connection signal="mouse_entered" from="ButtonsOverlay/Duplicate" to="." method="_on_buttons_mouse_over" binds= [true]]
[connection signal="mouse_exited" from="ButtonsOverlay/Duplicate" to="." method="_on_buttons_mouse_over" binds= [false]]
[connection signal="pressed" from="ButtonsOverlay/Duplicate" to="." method="_on_duplicate_pressed"]
